feat: add section__news

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                                 </p>
                             </div>
                             <div
-                                class="col-6 d-flex-center-center flex-column gap-6 py-4 bg-secondary counter-item"
+                                class="col-6 d-flex-center-center flex-column gap-7 py-4 bg-secondary counter-item"
                             >
                                 <p class="value-counter">
                                     <span class="stats__value value-counter"
@@ -1006,7 +1006,7 @@
                         >
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-6 stats__item"
+                                    class="d-flex-between-center flex-column gap-7 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Туроператоров
@@ -1016,7 +1016,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-6 stats__item"
+                                    class="d-flex-between-center flex-column gap-7 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Турагентств
@@ -1026,7 +1026,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-6 stats__item"
+                                    class="d-flex-between-center flex-column gap-7 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Отелей
@@ -1036,7 +1036,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-6 stats__item"
+                                    class="d-flex-between-center flex-column gap-7 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Всего
@@ -1384,10 +1384,10 @@
             <section class="section__reviews mb">
                 <div class="container">
                     <div class="reviews__wrapper d-flex flex-column gap-20-40">
-                        <div class="reviews__header d-flex flex-column gap-6">
+                        <div class="reviews__header d-flex flex-column gap-7">
                             <h2 class="title-secondary">Отзыв<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
                             <div class="reviews__controls d-flex-between-center">
-                                <div class="reviews-tabs__switcher d-flex-between-center gap-6" role="tablist" id="reviewsTabs">
+                                <div class="reviews-tabs__switcher d-flex-between-center gap-7" role="tablist" id="reviewsTabs">
                                     <button class="btn btn-secondary btn-link" data-category="dev" aria-selected="true" title="Разработка сайтов">Разработка сайтов</button>
                                     <button class="btn btn-tab btn-link" data-category="seo" title="Продвижение">Продвижение</button>
                                 </div>
@@ -1406,7 +1406,7 @@
                         </div>
                         <div class="swiper-container reviews-slider">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide review-slide d-flex gap-6" data-category="dev">
+                                <div class="swiper-slide review-slide d-flex gap-7" data-category="dev">
                                     <div class="review__item d-flex gap-3">
                                         <svg class="icon icon-quote">
                                             <use href="/assets/icons/sprite.svg#icon-quote">
@@ -1422,7 +1422,7 @@
                                         <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
                                     </div>
                                 </div>
-                                <div class="swiper-slide review-slide d-flex gap-6" data-category="dev">
+                                <div class="swiper-slide review-slide d-flex gap-7" data-category="dev">
                                     <div class="review__item d-flex gap-3">
                                         <svg class="icon icon-quote">
                                             <use href="/assets/icons/sprite.svg#icon-quote">
@@ -1447,7 +1447,7 @@
             <!-- Partners -->
             <section class="section__partners mb">
                 <div class="container">
-                    <div class="partners__header d-flex flex-column gap-6">
+                    <div class="partners__header d-flex flex-column gap-7">
                         <h2 class="title-secondary">Партнёр<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
                         <div class="partners-slider__header pos-relative">
                             <div class="swiper-button-prev partners-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
@@ -1515,6 +1515,52 @@
                 </div>
             </section>
             <!-- /Partners -->
+            <!-- News -->
+            <section class="section__news mb">
+                <div class="container">
+                    <h2 class="title-secondary news__title mb-40">Новости и стать<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>и</h2>
+                    <div class="row g-6">
+                        <div class="col-12 col-lg-6">
+                            <div class="card__news d-flex gap-3">
+                                <img src="/assets/images/news-img-1.png" alt="Иконка новости" class="news-img" width="81" height="81" loading="lazy">
+                                <div class="news__inner d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Заголовок новости</p>
+                                    <p class="text-body">Наша компания приняла участие в крупнейшей IT выставке-конференции для специалистов турбизнеса Travel IT WorkShop (TITW), которая прошла 6 июня в Москве (Palmira Business Club)!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card__news d-flex gap-3">
+                                <img src="/assets/images/news-img-1.png" alt="Иконка новости" class="news-img" width="81" height="81" loading="lazy">
+                                <div class="news__inner d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Заголовок новости</p>
+                                    <p class="text-body">Наша компания приняла участие в крупнейшей IT выставке-конференции для специалистов турбизнеса Travel IT WorkShop (TITW), которая прошла 6 июня в Москве (Palmira Business Club)!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card__news d-flex gap-3">
+                                <img src="/assets/images/news-img-1.png" alt="Иконка новости" class="news-img" width="81" height="81" loading="lazy">
+                                <div class="news__inner d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Заголовок новости</p>
+                                    <p class="text-body">Наша компания приняла участие в крупнейшей IT выставке-конференции для специалистов турбизнеса Travel IT WorkShop (TITW), которая прошла 6 июня в Москве (Palmira Business Club)!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card__news d-flex gap-3">
+                                <img src="/assets/images/news-img-1.png" alt="Иконка новости" class="news-img" width="81" height="81" loading="lazy">
+                                <div class="news__inner d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Заголовок новости</p>
+                                    <p class="text-body">Наша компания приняла участие в крупнейшей IT выставке-конференции для специалистов турбизнеса Travel IT WorkShop (TITW), которая прошла 6 июня в Москве (Palmira Business Club)!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="link-action news-link">Все статьи и новости</a>
+                </div>
+            </section>
+            <!-- /News -->
         </main>
         <!-- /Main -->
 
