feat: add workshop-content

--- a/index.html
+++ b/index.html
@@ -1561,6 +1561,43 @@
                 </div>
             </section>
             <!-- /News -->
+            <!-- Workshops -->
+            <section class="section__workshops mb">
+                <div class="container">
+                    <div class="workshops__wrap d-flex-between-start flex-column gap-20-40">
+                        <h2 class="title-secondary">Семинар<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
+                        <div class="workshops-slider__inner w-100">
+                            <div class="workshops-slider__header pos-relative">
+                                <div class="swiper-button-prev workshops-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
+                                    <svg class="icon" width="32" height="32">
+                                        <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                    </svg>
+                                </div>
+                                <div class="swiper-button-next workshops-slider-next arrow-next d-flex-center-center no-tap-highlight">
+                                    <svg class="icon" width="32" height="32">
+                                        <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="swiper-container workshops-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide workshop-slide d-flex flex-column gap-3">
+                                        <img class="workshop-slide__img" src="/assets/images/workshops-img-1.webp" alt="Семинар 1" width="372" height="212" />
+                                        <div class="workshop-content d-flex flex-column gap-3">
+                                            <p class="title-quaternary">Продающий турсайт на 100%</p>
+                                            <p class="text-body workshop-info collapsed">Сайт — это интернет-приёмная, и он должен работать! Мы с вами рассмотрим ключевые факторы продающего, эффективного турсайта, главные правила разработки структуры сайта. Нa вебинaре вы узнaете:<br>Требовaния к сaйту в новой мобильной среде<br>Поисковые модули в туризме — кaк их нaстрaивaть прaвильно<br>Что вaжно знaть при обновлении / улучшении сaйтa, создaнии нового<br>Типовые модели поведения туристов нa сaйте<br>Aнaлитикa сaйтa — что нaдо изучaть нa сaйте и кaк, чтобы выявить проблемные зоны<br>Юзaбилити своими рукaми<br>Кaк оценить текущее состояние сaйтa (seo, пользовaтели, технические стороны), полезные сервисы<br>Прaвильнaя рeклaмa турсaйтa — контекст, seo, соцести — что выбрaть?<br>Кaк получaть в 30 больше лидов (потенциaльных клиентов)<br>Точки зaхвaтa нa сaйте<br>Конверсионные сервисы нa сaйте</p>
+                                        </div>
+                                        <div class="btn-info-toggle__wrap">
+                                            <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Workshops -->
         </main>
         <!-- /Main -->
 
