--- a/ui.html
+++ b/ui.html
@@ -56,17 +56,23 @@
                     </button>
                     <span>.btn .btn-secondary .btn-tab</span>
                 </div>
-                <div class="d-flex align-items-center gap-2 mb-2">
+                <div class="d-flex align-items-center gap-2 mb-4">
                     <button class="btn btn-secondary btn-link">
                         Secondary Button Link
                     </button>
                     <span>.btn .btn-secondary .btn-link</span>
                 </div>
-                <div class="d-flex align-items-center gap-2 mb-2">
+                <div class="d-flex align-items-center gap-2 mb-4">
                     <button class="btn btn-tab btn-link">
                         Tab Button Link
                     </button>
                     <span>.btn .btn-tab .btn-link</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-4">
+                    <button class="btn btn-tab btn-link btn-info-toggle">
+                        Info Toggle Button
+                    </button>
+                    <span>.btn .btn-tab .btn-link .btn-info-toggle</span>
                 </div>
             </div>
         </section>
