feat: add section__workshops workshops-slider

--- a/index.html
+++ b/index.html
@@ -1582,7 +1582,37 @@
                             <div class="swiper-container workshops-slider">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide workshop-slide d-flex flex-column gap-3">
-                                        <img class="workshop-slide__img" src="/assets/images/workshops-img-1.webp" alt="Семинар 1" width="372" height="212" />
+                                        <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
+                                        <div class="workshop-content d-flex flex-column gap-3">
+                                            <p class="title-quaternary">Контекстная реклама</p>
+                                            <p class="text-body workshop-info collapsed">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать! Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар! Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
+                                        </div>
+                                        <div class="btn-info-toggle__wrap">
+                                            <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide workshop-slide d-flex flex-column gap-3">
+                                        <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
+                                        <div class="workshop-content d-flex flex-column gap-3">
+                                            <p class="title-quaternary">Продающий турсайт на 100%</p>
+                                            <p class="text-body workshop-info collapsed">Сайт — это интернет-приёмная, и он должен работать! Мы с вами рассмотрим ключевые факторы продающего, эффективного турсайта, главные правила разработки структуры сайта. Нa вебинaре вы узнaете:<br>Требовaния к сaйту в новой мобильной среде<br>Поисковые модули в туризме — кaк их нaстрaивaть прaвильно<br>Что вaжно знaть при обновлении / улучшении сaйтa, создaнии нового<br>Типовые модели поведения туристов нa сaйте<br>Aнaлитикa сaйтa — что нaдо изучaть нa сaйте и кaк, чтобы выявить проблемные зоны<br>Юзaбилити своими рукaми<br>Кaк оценить текущее состояние сaйтa (seo, пользовaтели, технические стороны), полезные сервисы<br>Прaвильнaя рeклaмa турсaйтa — контекст, seo, соцести — что выбрaть?<br>Кaк получaть в 30 больше лидов (потенциaльных клиентов)<br>Точки зaхвaтa нa сaйте<br>Конверсионные сервисы нa сaйте</p>
+                                        </div>
+                                        <div class="btn-info-toggle__wrap">
+                                            <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide workshop-slide d-flex flex-column gap-3">
+                                        <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
+                                        <div class="workshop-content d-flex flex-column gap-3">
+                                            <p class="title-quaternary">Контекстная реклама</p>
+                                            <p class="text-body workshop-info collapsed">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать! Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар! Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
+                                        </div>
+                                        <div class="btn-info-toggle__wrap">
+                                            <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide workshop-slide d-flex flex-column gap-3">
+                                        <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
                                         <div class="workshop-content d-flex flex-column gap-3">
                                             <p class="title-quaternary">Продающий турсайт на 100%</p>
                                             <p class="text-body workshop-info collapsed">Сайт — это интернет-приёмная, и он должен работать! Мы с вами рассмотрим ключевые факторы продающего, эффективного турсайта, главные правила разработки структуры сайта. Нa вебинaре вы узнaете:<br>Требовaния к сaйту в новой мобильной среде<br>Поисковые модули в туризме — кaк их нaстрaивaть прaвильно<br>Что вaжно знaть при обновлении / улучшении сaйтa, создaнии нового<br>Типовые модели поведения туристов нa сaйте<br>Aнaлитикa сaйтa — что нaдо изучaть нa сaйте и кaк, чтобы выявить проблемные зоны<br>Юзaбилити своими рукaми<br>Кaк оценить текущее состояние сaйтa (seo, пользовaтели, технические стороны), полезные сервисы<br>Прaвильнaя рeклaмa турсaйтa — контекст, seo, соцести — что выбрaть?<br>Кaк получaть в 30 больше лидов (потенциaльных клиентов)<br>Точки зaхвaтa нa сaйте<br>Конверсионные сервисы нa сaйте</p>
@@ -1592,6 +1622,9 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="workshops-slider__pagination pos-relative w-100">
+                                <div class="swiper-pagination workshops-slider-pagination no-tap-highlight"></div>
                             </div>
                         </div>
                     </div>
