fix: function initWorkshopSlider

--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@
                                         <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
                                         <div class="workshop-content d-flex flex-column gap-3">
                                             <p class="title-quaternary">Контекстная реклама</p>
-                                            <p class="text-body workshop-info collapsed">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать! Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар! Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
+                                            <p class="text-body workshop-info collapsed pos-relative">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать!<br>Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар!<br>Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
                                         </div>
                                         <div class="btn-info-toggle__wrap">
                                             <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
@@ -1604,7 +1604,7 @@
                                         <img class="workshop-slide__img" src="/assets/images/workshops-1.webp" alt="Семинар 1" width="372" height="212" />
                                         <div class="workshop-content d-flex flex-column gap-3">
                                             <p class="title-quaternary">Контекстная реклама</p>
-                                            <p class="text-body workshop-info collapsed">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать! Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар! Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
+                                            <p class="text-body workshop-info collapsed">Контекстную рекламу можно сравнить с сиреной, манящей покупателей в свои чарующие сети. И такими чарами должен владеть сегодня каждый уважающий себя продавец. Даже если вы уверены, что владеете всей необходимой информацией, и знаете, как заставить контекстную рекламу приносить вам максимальную прибыль при минимальных вложениях, нам все равно есть, что ещё вам рассказать!<br>Наш 8ми-летний опыт успешной работы в этом направлении открыл нам множество секретов, которыми мы готовы поделиться. Например, секреты использования Яндекс Директ и Google Adwords. А если вы не владеете никакой информацией о контекстной рекламе, тогда вам тем более стоит посетить наш Вебинар!<br>Узнайте нашу формулу успеха и создайте свою собственную! Контекстная реклама — это то, что действительно работает!</p>
                                         </div>
                                         <div class="btn-info-toggle__wrap">
                                             <button class="btn btn-tab btn-link btn-info-toggle">Подробнее</button>
@@ -1633,22 +1633,22 @@
                                 <form class="subscribe-form__item d-flex gap-2" id="subscribe-form" action="#"
                                     method="POST">
                                     <div class="row">
-                                        <div class="col-12 col-md-6 col-lg-3 mb-2">
+                                        <div class="col-12 col-md-6 col-lg-3">
                                             <input type="text" class="subscribe-form-input"
                                             required placeholder="Имя">
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-2">
+                                        <div class="col-12 col-md-6 col-lg-3">
                                             <input type="tel" class="subscribe-form-input"
                                             required
                                             autocomplete="tel"
                                             placeholder="Телефон">
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-2">
+                                        <div class="col-12 col-md-6 col-lg-3">
                                             <input type="email" class="subscribe-form-input"
                                             required
                                             placeholder="Почта">
                                         </div>
-                                        <div class="col-12 col-md-6 col-lg-3 mb-2 pos-relative">
+                                        <div class="col-12 col-md-6 col-lg-3 pos-relative">
                                             <select class="subscribe-form-input subscribe__form-select custom-select" required>
                                                 <option value="отель" selected>Сайт отеля</option>
                                                 <option value="турагентство">Сайт турагентства</option>
