refactor: add footer assets

--- a/index.html
+++ b/index.html
@@ -1049,15 +1049,6 @@
                 </div>
             </section>
             <!-- Services-stats END-->
-            <!-- Services -->
-            <!-- <section class="section__services mb">
-                <div class="container">
-                    <div class="services__inner">
-                        <h2 class="title-secondary">Услуг<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>и</h2>
-                    </div>
-                </div>
-            </section> -->
-            <!-- /Services -->
             <!-- Portfolio -->
             <section class="section__portfolio mb">
                 <div class="container">
@@ -1671,6 +1662,59 @@
                 </div>
             </section>
             <!-- /Workshops -->
+            <!-- FAQ -->
+            <section class="section__faq mb">
+                <div class="container">
+                    <div class="row">
+                        <div class="d-none d-lg-block col-lg-5 col-xl-6">
+                            <img src="/assets/images/faq-img.png" class="faq-img" alt="Декоративное изображение" width="570" height="520">
+                        </div>
+                        <div class="col-12 col-lg-7 col-xl-6">
+                            <h2 class="title-secondary mb-2rem">Вопросы и ответ<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
+                            <div class="faq-cards">
+                                <hr class="faq-line">
+                                <details class="faq-card" open>
+                                    <summary class="faq-summary title-quaternary d-flex-between-center">В каких случаях требуется техническое задание?
+                                        <svg class="icon icon-faq" width="32" height="32">
+                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                        </svg>
+                                    </summary>
+                                    <p class="text-body faq-text">Техническое задание необходимо для четкого определения функционала, структуры и дизайна сайта.</p>
+                                </details>
+                                <hr class="faq-line">
+                                <details class="faq-card">
+                                    <summary class="faq-summary title-quaternary d-flex-between-center">Что такое прототипы?
+                                        <svg class="icon icon-faq" width="32" height="32">
+                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                        </svg>
+                                    </summary>
+                                    <p class="text-body faq-text">Техническое задание необходимо для четкого определения функционала, структуры и дизайна сайта.</p>
+                                </details>
+                                <hr class="faq-line">
+                                <details class="faq-card">
+                                    <summary class="faq-summary title-quaternary d-flex-between-center">Какие вы даете гаранти на ваши работы?
+                                        <svg class="icon icon-faq" width="32" height="32">
+                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                        </svg>
+                                    </summary>
+                                    <p class="text-body faq-text">Техническое задание необходимо для четкого определения функционала, структуры и дизайна сайта.</p>
+                                </details>
+                                <hr class="faq-line">
+                                <details class="faq-card">
+                                    <summary class="faq-summary title-quaternary d-flex-between-center">Как сказывается ваш опыт в туризме на разработку?
+                                        <svg class="icon icon-faq" width="32" height="32">
+                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                        </svg>
+                                    </summary>
+                                    <p class="text-body faq-text">Техническое задание необходимо для четкого определения функционала, структуры и дизайна сайта.</p>
+                                </details>
+                                <hr class="faq-line">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /FAQ -->
         </main>
         <!-- /Main -->
 
