--- a/ui.html
+++ b/ui.html
@@ -108,6 +108,24 @@
                     </a>
                     <span>.icon-link .icon-social .icon-social--whatsapp</span>
                 </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <a class="icon-link icon-social icon-social--vk">
+                        <svg class="icon" width="32" height="32">
+                            <use href="/assets/icons/sprite.svg#icon-vk"></use>
+                        </svg>
+                    </a>
+                    <span>.icon-link .icon-social .icon-social--vk</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <a class="icon-link icon-social icon-social--youtube">
+                        <svg class="icon" width="32" height="32">
+                            <use
+                                href="/assets/icons/sprite.svg#icon-youtube"
+                            ></use>
+                        </svg>
+                    </a>
+                    <span>.icon-link .icon-social .icon-social--youtube</span>
+                </div>
             </div>
         </section>
         <section class="mb-4">
